--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bernardomg.github.io/todo-react-redux/",
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
@@ -11,6 +13,8 @@
     "semantic-ui": "^2.2.13"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
