--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "homepage": "https://bernardomg.github.io/todo-react-redux/",
   "dependencies": {
-    "gh-pages": "^1.0.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "gh-pages": "^1.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "^1.0.17",
     "redux": "^3.7.2",
@@ -22,6 +22,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.2",
     "standard": "^10.0.3"
   }
 }
