--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
+    "redux-devtools-extension": "^2.13.2",
     "standard": "^10.0.3"
   }
 }
