--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "^1.0.17",
     "redux": "^3.7.2",
+    "reselect": "^3.0.1",
     "semantic-ui": "^2.2.13",
     "semantic-ui-react": "^0.76.0"
   },
